--- a/config.h.in
+++ b/config.h.in
@@ -57,25 +57,40 @@
 /* Define to 1 if you have the clock_gettime function and monotonic timer. */
 #undef HAVE_CLOCK_GETTIME_MONOTONIC
 
-/* disabled non-blocking sockets */
-#undef HAVE_DISABLED_NONBLOCKING
-
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
 
 /* Define to 1 if you have the <errno.h> header file. */
 #undef HAVE_ERRNO_H
 
-/* use FIONBIO for non-blocking sockets */
-#undef HAVE_FIONBIO
+/* Define to 1 if you have the fcntl function. */
+#undef HAVE_FCNTL
 
-/* If you have gethostbyname */
+/* Define to 1 if you have the <fcntl.h> header file. */
+#undef HAVE_FCNTL_H
+
+/* Define to 1 if you have a working fcntl O_NONBLOCK function. */
+#undef HAVE_FCNTL_O_NONBLOCK
+
+/* Define to 1 if you have the freeaddrinfo function. */
+#undef HAVE_FREEADDRINFO
+
+/* Define to 1 if you have a working getaddrinfo function. */
+#undef HAVE_GETADDRINFO
+
+/* Define to 1 if you have the gethostbyaddr function. */
+#undef HAVE_GETHOSTBYADDR
+
+/* Define to 1 if you have the gethostbyname function. */
 #undef HAVE_GETHOSTBYNAME
+
+/* Define to 1 if you have the gethostname function. */
+#undef HAVE_GETHOSTNAME
 
 /* Define to 1 if you have the getnameinfo function. */
 #undef HAVE_GETNAMEINFO
 
-/* Specifies whether getservbyport_r is present */
+/* Define to 1 if you have the getservbyport_r function. */
 #undef HAVE_GETSERVBYPORT_R
 
 /* Define to 1 if you have the `gettimeofday' function. */
@@ -90,26 +105,36 @@
 /* Define to 1 if inet_net_pton supports IPv6. */
 #undef HAVE_INET_NET_PTON_IPV6
 
-/* Define to 1 if you have the `inet_ntop' function. */
+/* Define to 1 if you have a IPv6 capable working inet_ntop function. */
 #undef HAVE_INET_NTOP
 
-/* Define to 1 if inet_ntop supports IPv6. */
-#undef HAVE_INET_NTOP_IPV6
-
-/* Define to 1 if you have the `inet_pton' function. */
+/* Define to 1 if you have a IPv6 capable working inet_pton function. */
 #undef HAVE_INET_PTON
-
-/* Define to 1 if inet_pton supports IPv6. */
-#undef HAVE_INET_PTON_IPV6
 
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
-/* use ioctlsocket() for non-blocking sockets */
+/* Define to 1 if you have the ioctl function. */
+#undef HAVE_IOCTL
+
+/* Define to 1 if you have the ioctlsocket function. */
 #undef HAVE_IOCTLSOCKET
 
-/* use Ioctlsocket() for non-blocking sockets */
-#undef HAVE_IOCTLSOCKET_CASE
+/* Define to 1 if you have the IoctlSocket camel case function. */
+#undef HAVE_IOCTLSOCKET_CAMEL
+
+/* Define to 1 if you have a working IoctlSocket camel case FIONBIO function.
+   */
+#undef HAVE_IOCTLSOCKET_CAMEL_FIONBIO
+
+/* Define to 1 if you have a working ioctlsocket FIONBIO function. */
+#undef HAVE_IOCTLSOCKET_FIONBIO
+
+/* Define to 1 if you have a working ioctl FIONBIO function. */
+#undef HAVE_IOCTL_FIONBIO
+
+/* Define to 1 if you have a working ioctl SIOCGIFADDR function. */
+#undef HAVE_IOCTL_SIOCGIFADDR
 
 /* Define to 1 if you have the `resolve' library (-lresolve). */
 #undef HAVE_LIBRESOLVE
@@ -144,9 +169,6 @@
 /* Define to 1 if you have the <net/if.h> header file. */
 #undef HAVE_NET_IF_H
 
-/* use O_NONBLOCK for non-blocking sockets */
-#undef HAVE_O_NONBLOCK
-
 /* Define to 1 if you have PF_INET6. */
 #undef HAVE_PF_INET6
 
@@ -158,6 +180,12 @@
 
 /* Define to 1 if you have the send function. */
 #undef HAVE_SEND
+
+/* Define to 1 if you have the setsockopt function. */
+#undef HAVE_SETSOCKOPT
+
+/* Define to 1 if you have a working setsockopt SO_NONBLOCK function. */
+#undef HAVE_SETSOCKOPT_SO_NONBLOCK
 
 /* Define to 1 if you have the <signal.h> header file. */
 #undef HAVE_SIGNAL_H
@@ -171,9 +199,6 @@
 /* Define to 1 if your struct sockaddr_in6 has sin6_scope_id. */
 #undef HAVE_SOCKADDR_IN6_SIN6_SCOPE_ID
 
-/* use SO_NONBLOCK for non-blocking sockets */
-#undef HAVE_SO_NONBLOCK
-
 /* Define to 1 if you have the <stdbool.h> header file. */
 #undef HAVE_STDBOOL_H
 
@@ -183,11 +208,35 @@
 /* Define to 1 if you have the <stdlib.h> header file. */
 #undef HAVE_STDLIB_H
 
+/* Define to 1 if you have the strcasecmp function. */
+#undef HAVE_STRCASECMP
+
+/* Define to 1 if you have the strcmpi function. */
+#undef HAVE_STRCMPI
+
+/* Define to 1 if you have the strdup function. */
+#undef HAVE_STRDUP
+
+/* Define to 1 if you have the stricmp function. */
+#undef HAVE_STRICMP
+
 /* Define to 1 if you have the <strings.h> header file. */
 #undef HAVE_STRINGS_H
 
 /* Define to 1 if you have the <string.h> header file. */
 #undef HAVE_STRING_H
+
+/* Define to 1 if you have the strncasecmp function. */
+#undef HAVE_STRNCASECMP
+
+/* Define to 1 if you have the strncmpi function. */
+#undef HAVE_STRNCMPI
+
+/* Define to 1 if you have the strnicmp function. */
+#undef HAVE_STRNICMP
+
+/* Define to 1 if you have the <stropts.h> header file. */
+#undef HAVE_STROPTS_H
 
 /* Define to 1 if you have struct addrinfo. */
 #undef HAVE_STRUCT_ADDRINFO
@@ -225,6 +274,9 @@
 /* Define to 1 if you have the <sys/types.h> header file. */
 #undef HAVE_SYS_TYPES_H
 
+/* Define to 1 if you have the <sys/uio.h> header file. */
+#undef HAVE_SYS_UIO_H
+
 /* Define to 1 if you have the <time.h> header file. */
 #undef HAVE_TIME_H
 
@@ -239,6 +291,9 @@
 
 /* Define to 1 if you have the winsock.h header file. */
 #undef HAVE_WINSOCK_H
+
+/* Define to 1 if you have the writev function. */
+#undef HAVE_WRITEV
 
 /* Define to 1 if you have the ws2tcpip.h header file. */
 #undef HAVE_WS2TCPIP_H
@@ -365,6 +420,9 @@
 
 /* Define to 1 if you can safely include both <sys/time.h> and <time.h>. */
 #undef TIME_WITH_SYS_TIME
+
+/* Define to disable non-blocking sockets. */
+#undef USE_BLOCKING_SOCKETS
 
 /* Version number of package */
 #undef VERSION
